--- a/.ps_project/config.yaml
+++ b/.ps_project/config.yaml
@@ -9,12 +9,12 @@ filters:
 parameter-server:
   container: "tensorflow/tensorflow:1.13.1-py3"
   command: "pip install -r requirements.txt && python mnist.py"
-  machine-type: "G1"
+  machine-type: "c5.xlarge"
   count: 1
 worker:
   container: "tensorflow/tensorflow:1.13.1-gpu-py3"
   command: "pip install -r requirements.txt && python mnist.py"
-  machine-type: "K80"
+  machine-type: "p2.xlarge"
   count: 2
 model:
   type: Tensorflow
@@ -28,3 +28,5 @@ checks:
     aggregate: median
   defaults:
     precision: 3
+clusterId: clcjo828k
+vpc: true
