--- a/.ps_project/config.yaml
+++ b/.ps_project/config.yaml
@@ -1,30 +1,14 @@
-version: 1
-type: "multi-grpc"
-ports: "5000"
-filters:
-  tags:
-    only: 'v.*'
-  branches:
-    only: '.*'
-parameter-server:
-  container: "tensorflow/tensorflow:1.13.1-py3"
-  command: "pip install -r requirements.txt && python mnist.py"
-  machine-type: "G1"
-  count: 1
-worker:
-  container: "tensorflow/tensorflow:1.13.1-gpu-py3"
-  command: "pip install -r requirements.txt && python mnist.py"
-  machine-type: "K80"
-  count: 2
-model:
-  type: Tensorflow
-  path: '/artifacts'
-checks:
-  tensorflow:loss:
-    target: 0.0..1.0
-    aggregate: max
-  tensorflow:accuracy:
-    target: 0.988..1.000
-    aggregate: median
-  defaults:
-    precision: 3
+experimentType: GRPC
+experimentEnv: "{\"EPOCHS_EVAL\":\"5\",\"TRAIN_EPOCHS\":\"10\",\"MAX_STEPS\":\"1000\",\"EVAL_SECS\":\"10\"}"
+clusterId: clcjo828k
+workerContainer: tensorflow/tensorflow:1.13.1-gpu-py3
+workerMachineType: p2.xlarge
+workerCommand: "pip install -r requirements.txt && python mnist.py"
+workerCount: 2
+workspace: https://github.com/Paperspace/mnist-sample.git
+modelType: Tensorflow
+vpc: true
+parameterServerContainer: tensorflow/tensorflow:1.13.1-py3
+parameterServerMachineType: c5.xlarge
+parameterServerCommand: "python mnist.py"
+parameterServerCount: 1
