--- a/.ps_project/param-file-experiment.yaml
+++ b/.ps_project/param-file-experiment.yaml
@@ -5,7 +5,7 @@ experimentEnv:
   EVAL_SECS: 10
   MAX_STEPS: 1000
   TRAIN_EPOCHS: 10
-machineType: p2.xlarge
+machineType: c5.xlarge
 clusterId : clcjo828k
 modelPath: /artifacts
 modelType: Tensorflow
